Room dependency and app icon added

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,22 @@
 [versions]
-agp = "8.7.1"
+agp = "8.7.2"
 kotlin = "2.0.20"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-appcompat = "1.6.1"
-material = "1.10.0"
+appcompat = "1.7.0"
+material = "1.12.0"
 retrofit = "2.11.0"
-hilt = "2.48"
+hilt = "2.52"
 ksp = "2.0.20-1.0.24"
-okhttp = "4.11.0"
+okhttp = "4.12.0"
 gson = "2.10.1"
 gson-converter = "2.9.0"
 coroutine-adapter-factory = "0.9.2"
 coroutines = "1.8.1"
+room = "2.6.1"
+
 
 
 [libraries]
@@ -33,12 +35,14 @@ okhttp3-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 gson-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "gson-converter" }
 coroutine-adapter-factory = { module = "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter", version.ref = "coroutine-adapter-factory"}
-coroutines_core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
-coroutines_android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
+room = { module = "androidx.room:room-compiler", version.ref = "room" }
+coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-android-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+android-room = { id = "androidx.room", version.ref = "room"}
 
